Add Afterthought dependencies

--- a/src/samples/AddressBook/AddressBook.csproj
+++ b/src/samples/AddressBook/AddressBook.csproj
@@ -52,8 +52,7 @@
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
-    <PostBuildEvent>
-    </PostBuildEvent>
+    <PostBuildEvent>$(ProjectDir)..\..\..\tools\Afterthought\Afterthought.Amender "$(TargetPath)" "$(TargetDir)Stalker.Prey.dll"</PostBuildEvent>
   </PropertyGroup>
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
