--- a/src/Stalker.Prey.Tests/packages.config
+++ b/src/Stalker.Prey.Tests/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="FluentAssertions" version="1.6.0" />
   <package id="NUnit" version="2.5.10.11092" />
+  <package id="Rx_Experimental-Main" version="1.1.11111" />
 </packages>
