Added usage of the Rxx library which should simplify the logic of doing change notifications.

--- a/src/Stalker.Prey.Tests/Stalker.Prey.Tests.csproj
+++ b/src/Stalker.Prey.Tests/Stalker.Prey.Tests.csproj
@@ -43,6 +43,9 @@
     <Reference Include="pnunit.framework">
       <HintPath>..\packages\NUnit.2.5.10.11092\lib\pnunit.framework.dll</HintPath>
     </Reference>
+    <Reference Include="Rxx">
+      <HintPath>..\packages\Rxx_Experimental.1.2.4329.35292\lib\net40\Rxx.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Reactive">
