--- a/src/Stalker.Prey.Tests/packages.config
+++ b/src/Stalker.Prey.Tests/packages.config
@@ -3,4 +3,5 @@
   <package id="FluentAssertions" version="1.6.0" />
   <package id="NUnit" version="2.5.10.11092" />
   <package id="Rx_Experimental-Main" version="1.1.11111" />
+  <package id="Rxx_Experimental" version="1.2.4329.35292" />
 </packages>
