--- a/src/Stalker.Tests/packages.config
+++ b/src/Stalker.Tests/packages.config
@@ -4,4 +4,6 @@
   <package id="netfx-Guard" version="1.2.0.10" />
   <package id="netfx-Reflector" version="1.0.0.10" />
   <package id="NUnit" version="2.5.10.11092" />
+  <package id="Rx_Experimental-Main" version="1.1.11111" />
+  <package id="Rxx_Experimental" version="1.2.4329.35292" />
 </packages>
