--- a/src/Stalker.Tests/packages.config
+++ b/src/Stalker.Tests/packages.config
@@ -1,9 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="FluentAssertions" version="1.6.0" />
-  <package id="netfx-Guard" version="1.2.0.10" />
+  <package id="FluentAssertions" version="1.7.1.1" targetFramework="net40" />
+  <package id="netfx-Guard" version="1.3.2.0" targetFramework="net40" />
   <package id="netfx-Reflector" version="1.0.0.10" />
-  <package id="NUnit" version="2.5.10.11092" />
-  <package id="Rx_Experimental-Main" version="1.1.11111" />
-  <package id="Rxx_Experimental" version="1.2.4329.35292" />
+  <package id="NUnit" version="2.6.1" targetFramework="net40" />
+  <package id="PropertyChanged.Fody" version="1.27.0.0" targetFramework="net40" />
+  <package id="PropertyChanging.Fody" version="1.15.0.0" targetFramework="net40" />
 </packages>
