--- a/src/Stalker/Stalker.csproj
+++ b/src/Stalker/Stalker.csproj
@@ -31,31 +31,24 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Rxx">
-      <HintPath>..\packages\Rxx_Experimental.1.2.4329.35292\lib\net40\Rxx.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Reactive, Version=1.1.11111.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\packages\Rx_Experimental-Main.1.1.11111\lib\Net4\System.Reactive.dll</HintPath>
-    </Reference>
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
+    <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ChangeNotification.cs" />
-    <Compile Include="CollectionExtensions.cs" />
+    <Compile Include="AnonymousDisposable.cs" />
+    <Compile Include="EventManager.cs" />
     <Compile Include="ExpressionExtensions.cs" />
-    <Compile Include="NotificationExtensions.cs" />
+    <Compile Include="ITrackedItem.cs" />
+    <Compile Include="IWatcher.cs" />
     <Compile Include="Stalker.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="packages.config" />
+    <Compile Include="TrackedItem.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" />
