--- a/src/samples/AddressBook/packages.config
+++ b/src/samples/AddressBook/packages.config
@@ -1,5 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Rx_Experimental-Main" version="1.1.11111" />
-  <package id="Rxx_Experimental" version="1.2.4329.35292" />
+  <package id="reactiveui-core" version="3.99.2-beta" targetFramework="net40" />
+  <package id="Rx-Core" version="2.0.20823" targetFramework="net40" />
+  <package id="Rx-Interfaces" version="2.0.20823" targetFramework="net40" />
+  <package id="Rx-Linq" version="2.0.20823" targetFramework="net40" />
+  <package id="Rx-Main" version="2.0.20823" targetFramework="net40" />
+  <package id="Rx-PlatformServices" version="2.0.20823" targetFramework="net40" />
 </packages>
