--- a/src/Stalker.Tests/packages.config
+++ b/src/Stalker.Tests/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="FluentAssertions" version="1.7.1.1" targetFramework="net40" />
+  <package id="Moq" version="4.0.10827" targetFramework="net40" />
   <package id="netfx-Guard" version="1.3.2.0" targetFramework="net40" />
   <package id="netfx-Reflector" version="1.0.0.10" />
   <package id="NUnit" version="2.6.1" targetFramework="net40" />
